# align3d

./: .dockerignore  .gitignore  CONTRIBUTING  Cargo.toml  Dockerfile  Justfile  LICENSE  README.md  cspell.json
.github/workflows/: build-test.yml
benches/: bench_bilateral.rs  bench_compute_normals.rs  bench_icp.rs  bench_image_icp.rs  bench_kdtree.rs  bench_mesh.rs  bench_surfel_fusion.rs
examples/: Cargo.toml  Justfile
examples/src/: lib.rs
resources/shaders/surfel/: surfel_model.frag  surfel_model.geom  surfel_model.vert
resources/shaders/vkmesh/: mesh.frag  mesh.vert
resources/shaders/vkpointcloud/: frag.glsl  pointcloud.geom  pointcloud.vert  vert.glsl
src/: bilateral.rs  bounds.rs  camera.rs  color.rs  depth_processing.rs  error.rs  extra_math.rs  feature_map.rs  icp.rs  imagepointcloud.rs  intensity_map.rs  kdtree.rs  lib.rs  memory.rs  mesh.rs  metrics.rs  pointcloud.rs  rgbdimage_icp.rs  sampling.rs  trajectory.rs  trajectory_builder.rs  transform.rs  trig.rs  unit_test.rs
src/bilateral/: edge_aware_filter.rs  grid.rs  mod.rs
src/bin_utils/: dataset.rs
src/bounds/: box3d.rs  mod.rs  sphere3d.rs
src/icp/: cost_function.rs  icp.rs  icp_params.rs  image_icp.rs  mod.rs  multiscale.rs  pcl_icp.rs  unordered_icp.rs
src/image/: depth.rs  luma.rs  mod.rs  rgb.rs  rgbd_image.rs
src/imagepointcloud/: image_point_cloud.rs  mod.rs  point_cloud_view.rs  point_view.rs
src/io/: core.rs  dataset.rs  error.rs  geometry.rs  indoor_lidar_dataset.rs  mod.rs  off.rs  ply.rs  rgbd_image.rs  rgbdimage.rs  slamtb.rs  slamtb_dataset.rs
src/io/dataset/: core.rs  indoor_lidar.rs  mod.rs  slamtb.rs  tum.rs
src/kdtree/: kdtree_narray.rs  mod.rs  threedtree.rs
src/optim/: gaussnewton.rs  mod.rs  robust_estimator.rs
src/range_image/: builder.rs  mod.rs  ms_range_image.rs  point_cloud_view.rs  point_view.rs  range_image.rs  resize.rs  structure.rs
src/surfel/: fusion.rs  indexmap.rs  mod.rs  surfel_model.rs  surfel_type.rs
src/unit_test/: datasets.rs  geometries.rs  images.rs  mod.rs  point_clouds.rs  range_images.rs
src/utils/: access.rs  math.rs  mod.rs  window_iter.rs
src/viz/: compute.rs  geoviewer.rs  manager.rs  misc.rs  mod.rs  node.rs  offscreen_render.rs  pipeline.rs  rgbd_dataset_viewer.rs  scene.rs  sphere3d.rs  unit_test.rs  virtual_camera.rs  virtual_projection.rs  viz_camera.rs  window.rs
src/viz/controllers/: mod.rs  state.rs  virtual_camera_controller.rs
src/viz/geometry/: datatypes.rs  mod.rs  pointcloud.rs  sample_nodes.rs  surfel_node.rs  vkmesh.rs  vkpointcloud.rs
tests/: cli_tests.rs  test_bilateral.rs  test_icp.rs  test_image_icp.rs  test_rgbd_image_icp.rs  test_surfel_fusion.rs  test_surfel_render.rs
tests/data/: teapot.ply
tests/data/rgbd/sample1/: frames.json
tests/data/rgbd/sample2/: frames.json
tests/data/shaders/: frag.glsl  vert.glsl
tests/viz/: data.rs  teapot_node.rs  test_data.rs  test_dataset.rs  test_point_cloud.rs  test_rerun.rs  test_viz_point_cloud.rs  test_window.rs  triangle_node.rs
