[package]
name = "align3d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "align3d"
path = "src/lib.rs"

[[bin]]
name = "cli"
path = "src/bin/main.rs"

[features]
with_rerun = ["dep:rerun"]

[dependencies]
ndarray = { version = "0.15.3", features = ["approx", "rayon"] }
ndarray-rand = "0.14.0"
nshare = { version = "0.9.0", features = ["ndarray", "nalgebra"] }
rand = "0.8.5"
nalgebra = "0.30.1"
nalgebra-glm = { version = "0.16.0", optional = false }
num = "*"
ndarray-linalg = "0.12.0"
approx = "0.5.1"
clap = { version = "4.0.18", features = ["cargo"] }
image = "0.24.4"
serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.59"
ply-rs = "0.1.3"
vulkano = "0.32.1"
vulkano-shaders = "0.32.0"
vulkano-win = "0.32.0"
winit = "0.27.5"
bytemuck = "1.12.3"
itertools = "0.10.5"
rerun = {version = "0.2.0", optional = true }
glob = "0.3.1"

[dev-dependencies]
rstest = "0.15.0"
test-temp-file = "0.1.2"
tempfile = "3.3.0"
criterion = "0.4"

[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.11", features = ["flamegraph", "criterion"]  }

[[test]]
name = "viz-point_cloud"
path = "tests/viz/test_point_cloud.rs"
harness = false

[[test]]
name = "viz-window"
path = "tests/viz/test_window.rs"
harness = false

[[test]]
name = "test_icp"
path = "tests/test_icp.rs"
harness = false
features = "with_rerun"

[[test]]
name = "test_image_icp"
path = "tests/test_image_icp.rs"
harness = false

[[bench]]
name = "bench_mesh"
harness = false

[[bench]]
name = "bench_bilateral"
harness = false

[[bench]]
name = "bench_kdtree"
harness = false

[[bench]]
name = "bench_icp"
harness = false
