[package]
name = "align3d"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "align3d"
path = "src/lib.rs"

[[bin]]
name = "cli"
path = "src/bin/main.rs"

[[bin]]
name = "dataset_viewer"
path = "src/bin/dataset_viewer.rs"

[[bin]]
name = "odometry"
path = "src/bin/odometry.rs"

[[bin]]
name = "readme_sample"
path = "src/bin/readme_sample.rs"

[features]
with_rerun = []

[dependencies]
bytemuck = "1.12.3"
itertools = "0.10.5"
ndarray = { version = "0.15.3", features = ["approx", "rayon"] }
ndarray-rand = "0.14.0"
nshare = { version = "0.9.0", features = ["ndarray", "nalgebra"] }
rand = "0.8.5"
nalgebra = "0.30.1"
nalgebra-glm = { version = "0.16.0", optional = false }
num = "*"
ndarray-linalg = "0.12.0"
approx = "0.5.1"
clap = { version = "4.0.18", features = ["cargo", "derive"] }
image = "0.24.4"
serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.59"
ply-rs = "0.1.3"
vulkano = "0.33.0"
vulkano-shaders = "0.33.0"
vulkano-win = "0.33.0"
vulkano-util = "0.33.0"
winit = "0.28"
glob = "0.3.1"
egui = "0.21.0"
kdam = "0.3.0"
rayon = "1.7.0"
ordered-float = "3.7.0"
parking_lot = "0.12.1"
spin = "0.9.8"


[dev-dependencies]
rstest = "0.15.0"
test-temp-file = "0.1.2"
tempfile = "3.3.0"
criterion = "0.4"

[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.11", features = ["flamegraph", "criterion", "protobuf"]  }

[[test]]
name = "viz-point_cloud"
path = "tests/viz/test_point_cloud.rs"
harness = false

[[test]]
name = "viz-window"
path = "tests/viz/test_window.rs"
harness = false

[[test]]
name = "viz-dataset"
path = "tests/viz/test_dataset.rs"
harness = false

[[test]]
name = "test_icp"
path = "tests/test_icp.rs"
harness = false

[[test]]
name = "test_image_icp"
path = "tests/test_image_icp.rs"
harness = false

[[test]]
name = "test_surfel_fusion"
path = "tests/test_surfel_fusion.rs"
harness = false

##
# Benchmarks

[profile.bench]
debug = true
opt-level = 1               # Use slightly better optimizations.
overflow-checks = false     # Disable integer overflow checks.
debug-assertions = false # Disable debug assertions.

[[bench]]
name = "bench_mesh"
harness = false

[[bench]]
name = "bench_bilateral"
harness = false

[[bench]]
name = "bench_kdtree"
harness = false

[[bench]]
name = "bench_icp"
harness = false

[[bench]]
name = "bench_surfel_fusion"
harness = false

[[bench]]
name = "bench_image_icp"
harness = false
