[package]
name = "align3d"
version = "1.0.0"
edition = "2021"
authors = ["Otavio Gomes <otavio.b.gomes@gmail.com>"]
license = "MIT"
include = ["src/**/*", "LICENSE", "README.md", "!**/*_test.*", "!**/*_test/**/*"]
description = "Alignment with Iterative Closest Point (ICP) for point clouds and images"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "align3d"
path = "src/lib.rs"

[features]
viz = [
    "dep:vulkano",
    "dep:vulkano-shaders",
    "dep:vulkano-win",
    "dep:vulkano-util",
    "dep:winit",
    "dep:egui",
    "dep:nalgebra-glm",
]

[dependencies]
itertools = "0.10.5"
ndarray = { version = "0.15.3", features = ["approx", "rayon"] }
ndarray-rand = "0.14.0"
nshare = { version = "0.9.0", features = ["ndarray", "nalgebra"] }
rand = "0.8.5"
nalgebra = "0.30.1"
num = "0.4.0"
ndarray-linalg = "0.12.0"
approx = "0.5.1"
image = "0.24.4"
serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.59"
ply-rs = "0.1.3"
vulkano = { version = "0.33.0", optional = true }
vulkano-shaders = { version = "0.33.0", optional = true }
vulkano-win = { version = "0.33.0", optional = true }
vulkano-util = { version = "0.33.0", optional = true }
winit = { version = "0.28", optional = true }
egui = { version = "0.21.0", optional = true }
nalgebra-glm = { version = "0.16.0", optional = true }
glob = "0.3.1"
rayon = "1.7.0"
ordered-float = "3.7.0"

[dev-dependencies]
rstest = "0.15.0"
test-temp-file = "0.1.2"
tempfile = "3.3.0"
criterion = "0.4"

[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.11", features = ["flamegraph", "criterion", "protobuf"] }

[[test]]
name = "viz-point_cloud"
path = "tests/viz/test_point_cloud.rs"
harness = false
required-features = ["viz"]

[[test]]
name = "viz-window"
path = "tests/viz/test_window.rs"
harness = false
required-features = ["viz"]

[[test]]
name = "viz-dataset"
path = "tests/viz/test_dataset.rs"
harness = false
required-features = ["viz"]

[[test]]
name = "test_icp"
path = "tests/test_icp.rs"
harness = false
required-features = ["viz"]

[[test]]
name = "test_image_icp"
path = "tests/test_image_icp.rs"
harness = false
required-features = ["viz"]

[[bench]]
name = "bench_mesh"
path = "benches/bench_mesh.rs"
harness = false

[[bench]]
name = "bench_bilateral"
path = "benches/bench_bilateral.rs"
harness = false

[[bench]]
name = "bench_kdtree"
path = "benches/bench_kdtree.rs"
harness = false

[[bench]]
name = "bench_icp"
path = "benches/bench_icp.rs"
harness = false

[[bench]]
name = "bench_image_icp"
path = "benches/bench_image_icp.rs"
harness = false

[[bench]]
name = "bench_compute_normals"
path = "benches/bench_compute_normals.rs"
harness = false
